# cworkspace

./: CMakeLists.txt  CWorkspaceConfig.h.in  README.md
collections_lib/: CMakeLists.txt
collections_lib/collections/: common.h  graph.h  list.h  node.h  tree.h
collections_lib/src/: list.c  node.c  tree.c
src/: main.c
tools/: install.sh  package.sh
